Minor change to bio description

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 							<p>
 								<ul>
 									<li class="student-details"><i class="fa fa-code"></i>&nbsp Preference: HTML, CSS, Bootstrap, JavaScript, jQuery, Node.js, Express, C#, .Net, SQL.</li>
-									<li class="student-details"><a href="http://www.anne.codes/" class="student-details" target="_blank"><i class="fa fa-laptop"></i>&nbsp Portfolio</a></li>
+									<!-- <li class="student-details"><a href="http://www.anne.codes/" class="student-details" target="_blank"><i class="fa fa-laptop"></i>&nbsp Portfolio</a></li> -->
 									<li class="student-details"><a href="https://github.com/Anne0011" class="student-details" target="_blank"><i class="fa fa-github"></i>&nbsp GitHub</a></li>
 									<li class="student-details"><a href="https://www.linkedin.com/in/anne-grose-46524325" class="student-details" target="_blank"><i class="fa fa-linkedin"></i>&nbsp LinkedIn</a></li>
 								</ul>
@@ -432,7 +432,7 @@
 							<p>
 								<ul>
 									<li class="student-details"><i class="fa fa-code"></i>&nbsp Preference: HTML, CSS, Bootstrap, JavaScript, jQuery, Node.js, Express, C#, .Net, SQL.</li>
-									<li class="student-details"><a href="http://www.marsiethomas.io/" class="student-details" target="_blank"><i class="fa fa-laptop"></i>&nbsp Portfolio</a></li>
+									<!-- <li class="student-details"><a href="http://www.marsiethomas.io/" class="student-details" target="_blank"><i class="fa fa-laptop"></i>&nbsp Portfolio</a></li> -->
 									<li class="student-details"><a href="https://github.com/marsette25" class="student-details" target="_blank"><i class="fa fa-github"></i>&nbsp GitHub</a></li>
 									<li class="student-details"><a href="https://www.linkedin.com/in/marsette-thomas-a255ab9b" class="student-details" target="_blank"><i class="fa fa-linkedin"></i>&nbsp LinkedIn</a></li>
 								</ul>
