Minor change to one of the students bio.

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 					</div>
 					<div class="modal-body">
 						<div class="span8 offset2 tweak">
-							<p class="student-description">"Hola Mundo!"<br>Rolando is a Software Developer with a background in Applications Support and Computer Science that is passionate about creating awesome UX experiences that bridge the gap between functionality and design.<br><br>In his free time, Rolando loves spending time with his wife, Emily, and his two children, Violet and Levi. He can also be found playing golf, or screaming his head off at a Titans football game. </p>
+							<p class="student-description">"Hola Mundo!"<br>Rolando is a Software Developer with a background in Applications Support and Computer Science with a passion for creating engaging applications<br> and intuitive interfaces that bridge the gap between functionality and design.<br><br>In his free time, Rolando loves spending time with his wife, Emily, and his two children, Violet and Levi. He can also be found playing golf, or screaming his head off at a Titans football game. </p>
 							<p>
 								<ul>
 									<li class="student-details"><i class="fa fa-code"></i>&nbsp Preference: HTML, CSS, Bootstrap, UI/UX, JavaScript, jQuery, AngularJS, C#, .Net, SQL.</li>
